i want to be able to see my list

--- a/Data_Exploration.ipynb
+++ b/Data_Exploration.ipynb
@@ -28,55 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "be18ad72",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['авария 13 – traffic accident',\n",
-       " 'автобус 12 – bus',\n",
-       " 'автомобиль/машина 12 – car',\n",
-       " 'автомойка 13 – car wash',\n",
-       " 'аксессуары 13, 15 – accessories',\n",
-       " 'алкогольный напиток 16 – alcoholic drink',\n",
-       " 'аллергия 16 – allergy',\n",
-       " 'альпинизм 10 – mountain climbing',\n",
-       " 'ангина 16 – strep throat',\n",
-       " 'анкета 14 – application form',\n",
-       " 'апельсин 5 – orange',\n",
-       " 'арбуз 5 – watermelon',\n",
-       " 'аренда 11 – rent n.',\n",
-       " 'аспирантура 1 – graduate school',\n",
-       " 'афиша 10 – poster',\n",
-       " 'банан 5 – banana',\n",
-       " 'банкомат 13 – atm',\n",
-       " 'барабаны 10 – drums',\n",
-       " 'баскетбол 10 – basketball',\n",
-       " 'бег 10 – running',\n",
-       " 'бежать ~ бегать 12 – to run',\n",
-       " 'pres.: я бегу, ты бежишь, они бегут/я бегаю, ты бегаешь, они бегают',\n",
-       " 'past: он бежал, она бежала, они бежали/он бегал, она бегала, они бегали',\n",
-       " 'imperative: (не) беги/те! (не) бегай/те!',\n",
-       " 'без + gen. 3 – without',\n",
-       " 'безветренный 15 – windless, calm',\n",
-       " 'бел|о|к, pl. белки 5 – protein',\n",
-       " 'бензин 13 – gasoline',\n",
-       " 'берег, prep.: на берегу 1 – сoast, shore',\n",
-       " 'бесплатный 14 – free']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['авария 13 – traffic accident', 'автобус 12 – bus', 'автомобиль/машина 12 – car', 'автомойка 13 – car wash', 'аксессуары 13, 15 – accessories', 'алкогольный напиток 16 – alcoholic drink', 'аллергия 16 – allergy', 'альпинизм 10 – mountain climbing', 'ангина 16 – strep throat', 'анкета 14 – application form', 'апельсин 5 – orange', 'арбуз 5 – watermelon', 'аренда 11 – rent n.', 'аспирантура 1 – graduate school', 'афиша 10 – poster', 'банан 5 – banana', 'банкомат 13 – atm', 'барабаны 10 – drums', 'баскетбол 10 – basketball', 'бег 10 – running', 'бежать ~ бегать 12 – to run', 'pres.: я бегу, ты бежишь, они бегут/я бегаю, ты бегаешь, они бегают', 'past: он бежал, она бежала, они бежали/он бегал, она бегала, они бегали', 'imperative: (не) беги/те! (не) бегай/те!', 'без + gen. 3 – without', 'безветренный 15 – windless, calm', 'бел|о|к, pl. белки 5 – protein', 'бензин 13 – gasoline', 'берег, prep.: на берегу 1 – сoast, shore', 'бесплатный 14 – free']\n"
+     ]
     }
    ],
    "source": [
     "nti_txt = nti.split('\\n')\n",
     "nti_txt_low = [x.lower() for x in nti_txt]\n",
     "ntiplay = nti_txt_low[:30]\n",
-    "ntiplay"
+    "print(ntiplay)"
    ]
   },
   {
@@ -89,54 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ca8dccda",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['авария– traffic accident',\n",
-       " 'автобус– bus',\n",
-       " 'автомобиль/машина– car',\n",
-       " 'автомойка– car wash',\n",
-       " 'аксессуары– accessories',\n",
-       " 'алкогольный напиток– alcoholic drink',\n",
-       " 'аллергия– allergy',\n",
-       " 'альпинизм– mountain climbing',\n",
-       " 'ангина– strep throat',\n",
-       " 'анкета– application form',\n",
-       " 'апельсин– orange',\n",
-       " 'арбуз– watermelon',\n",
-       " 'аренда– rent n.',\n",
-       " 'аспирантура– graduate school',\n",
-       " 'афиша– poster',\n",
-       " 'банан– banana',\n",
-       " 'банкомат– atm',\n",
-       " 'барабаны– drums',\n",
-       " 'баскетбол– basketball',\n",
-       " 'бег– running',\n",
-       " 'бежать ~ бегать– to run',\n",
-       " 'pres.: я бегу, ты бежишь, они бегут/я бегаю, ты бегаешь, они бегают',\n",
-       " 'past: он бежал, она бежала, они бежали/он бегал, она бегала, они бегали',\n",
-       " 'imperative: (не) беги/те! (не) бегай/те!',\n",
-       " 'без + gen.– without',\n",
-       " 'безветренный– windless, calm',\n",
-       " 'белок, pl. белки– protein',\n",
-       " 'бензин– gasoline',\n",
-       " 'берег, prep.: на берегу– сoast, shore',\n",
-       " 'бесплатный– free']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['авария– traffic accident', 'автобус– bus', 'автомобиль/машина– car', 'автомойка– car wash', 'аксессуары– accessories', 'алкогольный напиток– alcoholic drink', 'аллергия– allergy', 'альпинизм– mountain climbing', 'ангина– strep throat', 'анкета– application form', 'апельсин– orange', 'арбуз– watermelon', 'аренда– rent n.', 'аспирантура– graduate school', 'афиша– poster', 'банан– banana', 'банкомат– atm', 'барабаны– drums', 'баскетбол– basketball', 'бег– running', 'бежать ~ бегать– to run', 'pres.: я бегу, ты бежишь, они бегут/я бегаю, ты бегаешь, они бегают', 'past: он бежал, она бежала, они бежали/он бегал, она бегала, они бегали', 'imperative: (не) беги/те! (не) бегай/те!', 'без + gen.– without', 'безветренный– windless, calm', 'белок, pl. белки– protein', 'бензин– gasoline', 'берег, prep.: на берегу– сoast, shore', 'бесплатный– free']\n"
+     ]
     }
    ],
    "source": [
     "# First, We need to get rid of any page numbers and extraneous white spaces\n",
     "ntiplay_cs = [re.sub('(\\s\\d+,|\\s\\d+\\s|\\|)', '', x) for x in ntiplay]\n",
-    "ntiplay_cs"
+    "print(ntiplay_cs)"
    ]
   },
   {
